--- a/FCC/PomodoroClock.html
+++ b/FCC/PomodoroClock.html
@@ -16,10 +16,11 @@
                 <input type="button" value="-"><span>25</span><input type="button" value="+">
             </div>
             <!--todo use :after to add a background layout when the time go-->
-            <div class="clock">
+            <div id="clock">
                 <span class="title">Session</span>
                 <span class="timeLeft">25:00</span>
             </div>
         </main>
+        <script src="javascripts/PomodoroClock.js"></script>
     </body>
 </html>
