todo Clock should be stop

--- a/FCC/PomodoroClock.html
+++ b/FCC/PomodoroClock.html
@@ -19,6 +19,7 @@
             <div id="clock">
                 <span class="title">Session</span>
                 <span class="timeLeft">25:00</span>
+                <div id="overlay"></div>
             </div>
         </main>
         <script src="javascripts/PomodoroClock.js"></script>
