--- a/IFE-Task/task-2-5.html
+++ b/IFE-Task/task-2-5.html
@@ -3,25 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>IFE JavaScript Task 01</title>
+    <link rel="stylesheet" href="css/task-2-5.css">
   </head>
 <body>
   <fieldset id="form-gra-time">
-    <legend>请选择日期粒度：</legend>
-    <label>日<input name="gra-time" value="day" type="radio" checked="checked"></label>
-    <label>周<input name="gra-time" value="week" type="radio"></label>
-    <label>月<input name="gra-time" value="month" type="radio"></label>
+      <legend>请选择日期粒度及城市</legend>
+      <div class="grade">
+          <label>
+              <span class="selected">日</span>
+              <input name="gra-time" value="day" type="radio" checked="checked">
+          </label>
+          <label>
+              <span>周</span>
+              <input name="gra-time" value="week" type="radio">
+          </label>
+          <label>
+              <span>月</span>
+              <input name="gra-time" value="month" type="radio">
+          </label>
+      </div>
+      <div class="select">
+          <select id="city-select">
+              <option>北京</option>
+          </select>
+      </div>
   </fieldset>
 
-  <fieldset>
-    <legend>请选择查看的城市：</legend>
-    <select id="city-select">
-      <option>北京</option>
-      <option>上海</option>
-      <option>广州</option>      
-    </select>
-  </fieldset>
-
-  <div class="aqi-chart-wrap">
+  <div id="aqi-chart-wrap">
   </div>
   <script src="js/task-2-5.js"></script>
 </body>
