--- a/DailyUI100Days/Day2CreditCard/index.html
+++ b/DailyUI100Days/Day2CreditCard/index.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <section class="cards-flow">
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
+            <div class="card1"><img src="" alt=""></div>
+            <div class="card2"><img src="" alt=""></div>
+            <div class="card3"><img src="" alt=""></div>
+            <div class="card4"><img src="" alt=""></div>
+            <div class="card5"><img src="" alt=""></div>
+            <div class="card6"><img src="" alt=""></div>
+            <div class="card7"><img src="" alt=""></div>
         </section>
         <section class="cards-info">
             <fieldset>
