Static Credit Card Page is DONE!

--- a/DailyUI100Days/Day2CreditCard/index.html
+++ b/DailyUI100Days/Day2CreditCard/index.html
@@ -19,6 +19,45 @@
         <section class="cards-info">
             <fieldset>
                 <legend>Card Details</legend>
+                <div class="logo"></div>
+                <h1>CARD NUMBER</h1>
+                <div class="card-number">
+                    <!--6227 0033 2174 0434 972-->
+                    <input type="text" maxlength="4">
+                    <input type="text" maxlength="4">
+                    <input type="text" maxlength="4">
+                    <input type="text" maxlength="4">
+                </div>
+                <h1>CARD HOLDER</h1>
+                <input type="text" class="card-holder">
+                <h1>VALID THRU</h1>
+                <select class="days">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                </select>
+                <select class="years">
+                    <option value="2017">2017</option>
+                    <option value="2018">2018</option>
+                    <option value="2019">2019</option>
+                    <option value="2020">2020</option>
+                    <option value="2021">2021</option>
+                    <option value="2022">2022</option>
+                    <option value="2023">2023</option>
+                    <option value="2024">2024</option>
+                    <option value="2025">2025</option>
+                    <option value="2026">2026</option>
+                </select>
+                <input type="submit" value="Submit">
             </fieldset>
         </section>
         <script src="main.js"></script>
