Landing Page Demo DONE!

--- a/DailyUI100Days/Day3LandingPage/index.html
+++ b/DailyUI100Days/Day3LandingPage/index.html
@@ -5,12 +5,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet">
+        <link href="about.css" rel="stylesheet">
+        <link href="navbar.css" rel="stylesheet">        
     </head>
     <body>
         <main>
             <header>
                 <nav class="navbar">
-                    
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </nav>
                 <h1 class="title">rookielzy</h1>
                 <nav class="contact">
@@ -19,9 +23,15 @@
             </header>
 
             <section class="about">
+                <img src="..\..\images\self-pic.jpg" alt="" class="self-pic">    
                 <div class="big-circle">
                     <span>.</span>
                     <div class="one">
+                        <div class="small-circle">
+                            <span>.</span>
+                            <div class="two">
+                            </div>    
+                        </div>                     
                     </div>
                 </div>
             </section>
