Landing Page Final Demo!

--- a/DailyUI100Days/Day3LandingPage/index.html
+++ b/DailyUI100Days/Day3LandingPage/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <main>
+            <h1>Hello There</h1>            
             <header>
                 <nav class="navbar">
                     <span></span>
@@ -25,7 +26,7 @@
             <section class="about">
                 <img src="..\..\images\self-pic.jpg" alt="" class="self-pic">    
                 <div class="big-circle">
-                    <span>.</span>
+                    <span id="me">.</span>
                     <div class="one">
                         <div class="small-circle">
                             <span>.</span>
