--- a/FCC/Calculator.html
+++ b/FCC/Calculator.html
@@ -10,11 +10,34 @@
         <div class="calculator">
             <h1>ELECTRONIC CALCULATOR</h1>
             <div class="display">
-                <div id="displayMain"></div>
-                <div id="displayAll"></div>
+                <div id="displayMain">123</div>
+                <div id="displayAll">123</div>
             </div>
             <div class="btns">
-
+                <div class="test">
+                    <div>AC</div>
+                    <div>CE</div>
+                    <div>÷</div>
+                    <div>×</div>
+                </div>
+                <div class="test">
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>－</div>
+                </div>
+                <div class="test">
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>+</div>
+                </div>
+                <div class="test">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>=</div>
+                </div>
             </div>
         </div>
         <script src="javascripts/Calculator.js"></script>
