--- a/FCC/Calculator.html
+++ b/FCC/Calculator.html
@@ -14,29 +14,39 @@
                 <div id="displayAll">123</div>
             </div>
             <div class="btns">
-                <div class="test">
+                <div class="first-part">
                     <div>AC</div>
                     <div>CE</div>
                     <div>÷</div>
                     <div>×</div>
                 </div>
-                <div class="test">
+                <div class="first-part">
                     <div>7</div>
                     <div>8</div>
                     <div>9</div>
                     <div>－</div>
                 </div>
-                <div class="test">
+                <div class="first-part">
                     <div>4</div>
                     <div>5</div>
                     <div>6</div>
                     <div>+</div>
                 </div>
-                <div class="test">
-                    <div>1</div>
-                    <div>2</div>
-                    <div>3</div>
-                    <div>=</div>
+                <div class="second-part">
+                    <!--one column-->  
+                    <div id="one">
+                        <div>
+                            <div>1</div>
+                            <div>2</div>
+                            <div>3</div>
+                        </div>
+                        <div>
+                            <div id="zero">0</div>
+                            <div>.</div>
+                        </div>
+                    </div>
+                    <!--two column-->
+                    <div id="equal">=</div>
                 </div>
             </div>
         </div>
