Drink too much. Take a rest!

--- a/FCC/Calculator.html
+++ b/FCC/Calculator.html
@@ -10,8 +10,8 @@
         <div class="calculator">
             <h1>ELECTRONIC CALCULATOR</h1>
             <div class="display">
-                <div id="displayMain">123</div>
-                <div id="displayAll">123</div>
+                <div id="displayMain"></div>
+                <div id="displayAll"></div>
             </div>
             <div class="btns">
                 <div class="first-part">
