Portfolio Demo Done!

--- a/DailyUI100Days/Day6UserPortfolio/index.html
+++ b/DailyUI100Days/Day6UserPortfolio/index.html
@@ -15,10 +15,11 @@
                 <h1>罗志尧</h1>
                 <h2>Web Developer</h1>
                 <ul>
-                    <li class="project"><a href="#"><img src="box.png" alt=""></a></li>
-                    <li class="github"><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li class="project"><a href="#" class="link"><img src="box.png" alt=""></a></li>
+                    <li class="github"><a href="#" class="link"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                 </ul>
             </section>
         </main>
+        <script src="main.js"></script>
     </body>
 </html>
