Setting Profile Demo Done!

--- a/DailyUI100Days/Day7Setting/index.html
+++ b/DailyUI100Days/Day7Setting/index.html
@@ -24,8 +24,48 @@
                 </div>    
             </nav>
             <!--top navbar end-->
-            <section>
-                
+            <section class="content">
+                <section class="avatar">
+                    <div class="show-avatar">
+                        <img src="" alt="">
+                        <div>
+                            <h1>User Avatar</h1>
+                            <input type="file" name="avatar" id="selectFile">   
+                        </div>
+                    </div>
+                </section>
+                <section class="detail">
+                    <div>
+                        <div>
+                            <input type="text" name="username" onfocus="true">
+                            <label for="username">Name</label>
+                            <hr/>
+                        </div>
+                        <div>
+                            <input type="text" name="location">                            
+                            <label for="location">Location</label>                            
+                            <hr/>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <input type="text" name="title">
+                            <label for="title">Title</label>
+                            <hr/>                            
+                        </div>
+                        <div>
+                            <input type="text" name="website">  
+                            <label for="website">Website</label>
+                            <hr/>                            
+                        </div>
+                    </div>
+                    <div>
+                        <input type="text" name="about"> 
+                        <label for="about">About</label>
+                        <hr/>                        
+                    </div>
+                    <input type="submit" value="Save">
+                </section>
             </section>
         </mian>
     </body>
