--- a/DailyUI100Days/Day7Setting/index.html
+++ b/DailyUI100Days/Day7Setting/index.html
@@ -37,30 +37,30 @@
                 <section class="detail">
                     <div>
                         <div>
-                            <input type="text" name="username" onfocus="true">
+                            <input type="text" name="username" value="rookielzy" required>
                             <label for="username">Name</label>
                             <hr/>
                         </div>
                         <div>
-                            <input type="text" name="location">                            
+                            <input type="text" name="location" required>                            
                             <label for="location">Location</label>                            
                             <hr/>
                         </div>
                     </div>
                     <div>
                         <div>
-                            <input type="text" name="title">
+                            <input type="text" name="title" required>
                             <label for="title">Title</label>
                             <hr/>                            
                         </div>
                         <div>
-                            <input type="text" name="website">  
+                            <input type="text" name="website" required>  
                             <label for="website">Website</label>
                             <hr/>                            
                         </div>
                     </div>
                     <div>
-                        <input type="text" name="about"> 
+                        <input type="text" name="about" required> 
                         <label for="about">About</label>
                         <hr/>                        
                     </div>
