--- a/DailyUI100Days/Day7Setting/index.html
+++ b/DailyUI100Days/Day7Setting/index.html
@@ -13,7 +13,7 @@
         <!--top navbar start-->
         <input type="radio" name="setting" value="Profile"><span>Profile</span><input type="radio" name="setting" value="Account"><span>Account</span><input type="radio" name="setting" value="Privacy"><span>Privacy</span><input type="radio" name="setting" value="Advanced"><span>Advanced</span>
         <!--top navbar end-->
-        <section class="profile" id="test">
+        <section class="profile">
             <section class="avatar">
                 <div class="show-avatar">
                     <img src="" alt="">
