Hell Yeah Setting Account Done!

--- a/DailyUI100Days/Day7Setting/index.html
+++ b/DailyUI100Days/Day7Setting/index.html
@@ -56,6 +56,53 @@
                 <input type="submit" value="Save">
             </section>
         </section>
+        <section class="account">
+            <section class="detail">
+                <div>
+                    <div>
+                        <input type="email" name="email" value="email@domain.com" required>
+                        <label for="email">Email</label>
+                        <hr/>
+                    </div>
+                    <div>
+                        <input type="text" name="username" required>
+                        <label for="username">Username</label>
+                        <hr/>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <input type="password" name="password" required>
+                        <label for="password">Password</label>
+                        <hr/>
+                    </div>
+                    <div>
+                        <input type="password" name="password" required>
+                        <label for="confirm-pw">Confirm Password</label>
+                        <hr/>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <input type="button" value="Unlink Github Account">
+                    </div>
+                    <div>
+                        <input type="button" value="Link QQ Account">
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <input type="button" value="Link Weibo Account">
+                    </div>
+                    <div>
+                        <input type="button" value="Link Wechat Account">
+                    </div>
+                </div>
+                <div>
+                    <input type="submit" value="Save">
+                </div>
+            </section>
+        </section>
     </mian>
 </body>
 
