--- a/DailyUI100Days/Day9MusicPlayer/index.html
+++ b/DailyUI100Days/Day9MusicPlayer/index.html
@@ -14,6 +14,11 @@
                     <h1>AGGRESSIVE</h1>
                     <span class="share"></span>
                 </header>
+                <section class="content">
+                    <div class="spin">
+                        
+                    </div>
+                </section>
             </div>
         </main>
     </body>
