Spin that Shit!

--- a/DailyUI100Days/Day9MusicPlayer/index.html
+++ b/DailyUI100Days/Day9MusicPlayer/index.html
@@ -17,7 +17,9 @@
         </header>
         <section class="content">
             <div class="spin">
-
+                <div class="spin-black">
+                    <div class="musicer"></div>
+                </div>
             </div>
         </section>
     </main>
