todo part3 and JS

--- a/DailyUI100Days/Day9MusicPlayer/index.html
+++ b/DailyUI100Days/Day9MusicPlayer/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/38201af01b.js"></script>
 </head>
 
 <body>
@@ -13,13 +14,33 @@
         <header>
             <span>&lt;</span>
             <h1>AGGRESSIVE</h1>
-            <span class="share"></span>
+            <span class="share"><i class="fa fa-share-alt" aria-hidden="true"></i></span>
         </header>
         <section class="content">
             <div class="spin">
                 <div class="spin-black">
-                    <div class="musicer"></div>
+                    <div class="musician"></div>
                 </div>
+            </div>
+        </section>
+        <section class="controler">
+            <div class="part1">
+                <span id="love"><i class="fa fa-heart" aria-hidden="true"></i></span>
+                <span id="download"><i class="fa fa-download" aria-hidden="true"></i></span>
+                <span id="comment"><i class="fa fa-comments" aria-hidden="true"></i></span>
+                <span id="more">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+            </div>
+            <div class="part2">
+                <span id="start">00:00</span>
+                <span id="progressBar"></span>
+                <span id="end">00:00</span>
+            </div>
+            <div class="part3">
+                
             </div>
         </section>
     </main>
