--- a/DailyUI100Days/Day9MusicPlayer/index.html
+++ b/DailyUI100Days/Day9MusicPlayer/index.html
@@ -40,7 +40,11 @@
                 <span id="end">00:00</span>
             </div>
             <div class="part3">
-                
+                <span id="mode"><i class="fa fa-random" aria-hidden="true"></i></span>
+                <span id="last"><i class="fa fa-step-backward" aria-hidden="true"></i></span>
+                <span id="play"><i class="fa fa-play-circle-o" aria-hidden="true"></i></span>
+                <span id="next"><i class="fa fa-step-forward" aria-hidden="true"></i></span>
+                <span id="list"><i class="fa fa-list" aria-hidden="true"></i></span>
             </div>
         </section>
     </main>
