--- a/DailyUI100Days/Day9MusicPlayer/index.html
+++ b/DailyUI100Days/Day9MusicPlayer/index.html
@@ -25,9 +25,9 @@
         </section>
         <section class="controler">
             <div class="part1">
-                <span id="love"><i class="fa fa-heart" aria-hidden="true"></i></span>
+                <span id="love"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
                 <span id="download"><i class="fa fa-download" aria-hidden="true"></i></span>
-                <span id="comment"><i class="fa fa-comments" aria-hidden="true"></i></span>
+                <span id="comment"><i class="fa fa-comments-o" aria-hidden="true"></i></span>
                 <span id="more">
                     <span></span>
                     <span></span>
@@ -48,6 +48,7 @@
             </div>
         </section>
     </main>
+    <script src="main.js"></script>
 </body>
 
 </html>
