FIrst Page fixed Link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>罗志尧</h1>
                 <h2>Web Developer</h1>
                 <ul>
-                    <li class="project"><a href="#" class="link"><img src="box.png" alt=""></a></li>
+                    <li class="project"><a href="#" class="link"><img src="images/box.png" alt=""></a></li>
                     <li class="github"><a href="https://github.com/rookielzy" class="link"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                 </ul>
             </section>
