First Page Done!

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="https://use.fontawesome.com/38201af01b.js"></script>
     </head>
     <body>
+        <canvas id="canvas"></canvas>
         <main class="portfolio">
             <aside class="avatar"></aside>
             <section class="user-info">
@@ -21,5 +22,6 @@
             </section>
         </main>
         <script src="javascripts/main.js"></script>
+        <script src="javascripts/colorfulRainy.js"></script>
     </body>
 </html>
