--- a/IFE-2017/ThreeJs/index.html
+++ b/IFE-2017/ThreeJs/index.html
@@ -12,7 +12,7 @@
 
                 // renderer
                 var renderer = new THREE.WebGLRenderer();
-                renderer.setSize(400, 300);
+                renderer.setSize(800, 600);
                 document.getElementsByTagName('body')[0].appendChild(renderer.domElement);
                 renderer.setClearColor(0x000000);
 
@@ -20,14 +20,23 @@
                 var scene = new THREE.Scene();
 
                 // camera
-                var camera = new THREE.PerspectiveCamera(45, 4 / 3, 1, 1000);
-                camera.position.set(0, 0, 5);
+                var camera = new THREE.PerspectiveCamera(45, 800 / 600, 1, 10);
+                camera.position.set(-1, 0, 4);
                 scene.add(camera);
 
-                // a cube in the scene
-                var cube = new THREE.Mesh(new THREE.CubeGeometry(1, 2, 3),
+                // var cube = new THREE.Mesh(new THREE.CubeGeometry(1, 1, 1),
+                //         new THREE.MeshBasicMaterial({
+                //             color: 0xff0000,
+                //             wireframe: true
+                //         })
+                // );
+                // var radius = new THREE.TorusGeometry(3, 1, 4, 8);
+                // scene.add(radius);
+                // scene.add(cube);
+                var cube = new THREE.Mesh(new THREE.CubeGeometry(1, 1, 2),
                         new THREE.MeshBasicMaterial({
-                            color: 0xff0000
+                            color: 0xa3a3a3,
+                            wireframe: false
                         })
                 );
                 scene.add(cube);
