--- a/HTML5/MEMEMarker/index.html
+++ b/HTML5/MEMEMarker/index.html
@@ -48,10 +48,24 @@
             // Get Canvas2DContext
             var canvas = document.querySelector('canvas');
             var ctx = canvas.getContext("2d");
-            ctx.drawImage(image, 5, 5);
-            ctx.strokeText(topLine, 120, 50);
-            ctx.strokeText(bottomLine, 120, 450);
-            ctx.stroke();
+            if (image != null) {
+                ctx.drawImage(image, 0, 0, canvas.width, canvas.height);
+            }
+            ctx.font = '30pt Impact';
+            ctx.textAlign = 'center';
+            ctx.strokeStyle = 'black';
+            ctx.lineWidth = 3;
+            ctx.fillStyle = 'white';
+
+            if (topLine != null) {
+                ctx.fillText(topLine, canvas.width / 2, 40);
+                ctx.strokeText(topLine, canvas.width / 2, 40);
+            }
+
+            if (bottomLine != null) {
+                ctx.fillText(bottomLine, canvas.width / 2, canvas.height -20);
+                ctx.strokeText(bottomLine, canvas.width / 2, canvas.height - 20);
+            }
         }
 
         function saveFile() {
