--- a/src/static/landing.html
+++ b/src/static/landing.html
@@ -7,6 +7,6 @@
         <link href="landing.css" rel="stylesheet">
     </head>
     <body>
-    
+        Rebuild the Blog Page
     </body>
 </html>
